--- a/templates/health/index.html
+++ b/templates/health/index.html
@@ -23,9 +23,9 @@
     <link rel="stylesheet" href="{{ STATIC_URL }}/health/css/icomoon.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}/health/css/style.css">
 
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}base/datatable/dataTables.bootstrap.min.css">
 
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 
 </head>
 
@@ -100,19 +100,23 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form id="clientDetailsForm">
+                <form id="clientDetailsForm" method="post">
                     {% csrf_token %}
                     <div class="form-group">
-                        <input name="userID" class="form-control" type="text" placeholder="User ID" required="required">
+                        <input id="userID" name="userID" class="form-control" type="text" placeholder="User ID" required="required">
                     </div>
                     <div class="form-group">
                         <label for="dob">Date of Birth</label>
-                        <input name=dob class="form-control" type="text" id="datepicker" placeholder="MM/DD/YYYY" required="required">
+                        <input name=dob class="form-control" type="text" id="dob" placeholder="YYYY-MM-DD" required="required">
                     </div>
-                     <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-primary">Save changes</button>
-                        </div>
+                    <div class="form-group">
+                        <label for="reportDate">Report Date</label>
+                        <input name=reportDate class="form-control" type="text" id="reportDate" required="required">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary closeModal" data-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
                 </form>
             </div>
         </div>
@@ -137,7 +141,7 @@
                             <div class="row">
                                 <div class="col-sm-12">
 
-                                    <input style="float: right" class="form-control" type="text" id="datepicker" placeholder="MM/DD/YYYY">
+                                    {#                                    <input style="float: right" class="form-control" type="text" id="datepicker" placeholder="MM/DD/YYYY">#}
 
                                     <table id="user_health" class="table table-striped table-bordered">
 
@@ -782,33 +786,70 @@
 <script src="{{ STATIC_URL }}/health/js/jquery.animateNumber.min.js"></script>
 <script src="{{ STATIC_URL }}/health/js/scrollax.min.js"></script>
 
+<script src="{{ STATIC_URL }}/health/js/main.js"></script>
+<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
+
 {#<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>#}
 {#<script src="{{ STATIC_URL }}/health/js/google-map.js"></script>#}
-<script src="{{ STATIC_URL }}/health/js/main.js"></script>
 
 <script type="text/javascript" src="{{ STATIC_URL }}base/datatable/jquery.dataTables.min.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}base/datatable/dataTables.bootstrap.min.js"></script>
 
-<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
-<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-
-
 <script>
+
     $(function() {
-        $("#datepicker").datepicker().on('change', function() {
-            // select on change
-            let date = $("#datepicker").datepicker("getDate");
-            console.log($.datepicker.formatDate("dd-mm-yy", date));
+
+        $(document).ready(function () {
+            $('#dob').datepicker({
+                date: new Date(),
+                dateFormat: 'yy-mm-dd'
+            });
         });
+
+        let today = new Date().toISOString().substr(0, 10);
+        document.querySelector("#reportDate").value = today;
+
+        $(document).ready(function () {
+            $('#reportDate').datepicker({
+                date: new Date(),
+                dateFormat: 'yy-mm-dd'
+            });
+        });
+
     });
 
-{% comment %}    //trigger when form is submitted
-    $("#clientDetailsForm").submit(function(e){
-        e.preventDefault();
-        this.submit();
-        $('#healthModal').modal('show');
-    });{% endcomment %}
 
+    $(document).ready(function(){
+
+        $("#clientDetails").on("hidden.bs.modal", function () {
+            document.getElementById("clientDetailsForm").reset();
+            let today = new Date().toISOString().substr(0, 10);
+            document.querySelector("#reportDate").value = today;
+        });
+
+
+        $("#clientDetailsForm").submit(function(evt){
+            evt.preventDefault();
+
+            $.ajax({
+                type: "POST",
+                dataType: "json",
+                url: "{% url 'client_report' %}",
+                data : $("#clientDetailsForm").serialize(),
+                success: function(data){
+                    if(data.success){
+                        $('#healthModal').modal('show');
+                    }else{
+                        console.log("not success")
+                    }
+                },
+                error: function(xhr, desc, err){
+                    console.log(err);
+                }
+            });
+        });
+    });
 </script>
 
 </body>
