--- a/templates/health/dashboard.html
+++ b/templates/health/dashboard.html
@@ -95,35 +95,44 @@
 
 {% block javascript %}
 
+    <script>
+            $(document).ready( function () {
+            $('#dt-healthList').DataTable( {
+                "bFilter": true
+            } );
+        } );
+    </script>
 
-     $(document).ready(function(){
-        $("#clientDetailsForm").submit(function(evt){
-            evt.preventDefault();
+    <script>
+        $(document).ready(function(){
+            $("#clientDetailsForm").submit(function(evt){
+                evt.preventDefault();
 
-            $.ajax({
-                type: "POST",
-                dataType: "json",
-                url: "{% url 'client_report' %}",
-                data : {
-                    'user_id': 'bibek',
-                    'csrfmiddlewaretoken': '{{ csrf_token }}'
-                },
-                success: function(data){
-                    if(data.success){
-                        console.log("success");
-                        $('#healthModal').modal('show');
-                        document.getElementById("clientDetailsForm").reset();
-                        $('#clientDetails').modal('hide');
+                $.ajax({
+                    type: "POST",
+                    dataType: "json",
+                    url: "{% url 'client_report' %}",
+                    data : {
+                        'user_id': 'bibek',
+                        'csrfmiddlewaretoken': '{{ csrf_token }}'
+                    },
+                    success: function(data){
+                        if(data.success){
+                            console.log("success");
+                            $('#healthModal').modal('show');
+                            document.getElementById("clientDetailsForm").reset();
+                            $('#clientDetails').modal('hide');
 
-                    }else{
-                        console.log("not success")
+                        }else{
+                            console.log("not success")
+                        }
+                    },
+                    error: function(xhr, desc, err){
+                        console.log(err);
                     }
-                },
-                error: function(xhr, desc, err){
-                    console.log(err);
-                }
+                });
             });
         });
-    });
+    </script>
 
 {% endblock %}
