editing user report section

--- a/static/health/css/style.css
+++ b/static/health/css/style.css
@@ -9591,3 +9591,8 @@ textarea.form-control {
   100% {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
+
+
+.report_table {
+  color: #70BD60;
+}
