--- a/templates/account/add_group.html
+++ b/templates/account/add_group.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'health_base.html' %}
 {% block title %}Add Groups {% endblock %}
 {% block links %}
 <!--     <link rel="stylesheet" type="text/css" href="/static/admin/css/base.css">
