--- a/templates/account/change_user.html
+++ b/templates/account/change_user.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'health_base.html' %}
 {% block title %}Change Users {% endblock %}
 {% load static %}
 {% block links %}
