--- a/templates/account/change_group.html
+++ b/templates/account/change_group.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'health_base.html' %}
 {% block title %}Change Groups {% endblock %}
 {% block links %}
 {#    <link rel="stylesheet" type="text/css" href="/static/admin/css/base.css">#}
