--- a/templates/account/users.html
+++ b/templates/account/users.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'health_base.html' %}
 {% block title %}Manage Users {% endblock %}
 {% load static %}
 {% block links %}
