table added for user report

--- a/templates/health/health_report.html
+++ b/templates/health/health_report.html
@@ -31,14 +31,10 @@
                     <div class="col-sm-12 report_table">
                         <table id="dt-orgList" class="table table-bordered table-striped"
                                style="font-size: 12px; width: 100%; margin-top: 45px; margin-bottom: 45px" role="grid" aria-describedby="example_info">
-                            <tr>
-                                <th>Date</th>
-                                <th colspan="7">Vital Sign</th>
-                                <th colspan="3">Blood Test</th>
-                                <th colspan="11">Urine Test</th>
-                            </tr>
-                            <tr>
-                                <th rowspan="2">Jan</th>
+
+                            <tr style="text-align: center">
+                                <th rowspan="6" style="vertical-align: middle">Jan</th>
+                                <th rowspan="2" style="vertical-align: middle">Vital Sign</th>
                                 <th>Weight</th>
                                 <th>Height</th>
                                 <th>Temperature</th>
@@ -46,11 +42,53 @@
                                 <th>Bp_systolic</th>
                                 <th>Bp_diastolic</th>
                                 <th>Sto2</th>
-
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <th rowspan="2" style="vertical-align: middle">Blood Test</th>
                                 <th>Glucose</th>
                                 <th>Cholestrol</th>
                                 <th>Uric Acid</th>
-
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <th rowspan="2" style="vertical-align: middle;text-align: center;">Urine Test</th>
                                 <th>Leukocytes</th>
                                 <th>Nitrate</th>
                                 <th>Urobilinogen</th>
@@ -71,11 +109,30 @@
                                 <td></td>
                                 <td></td>
                                 <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            {###################################################################################################}
 
-                                <td></td>
-                                <td></td>
-                                <td></td>
 
+                            <tr style="text-align: center">
+                                <th rowspan="6" style="vertical-align: middle">Feb</th>
+                                <th rowspan="2" style="vertical-align: middle">Vital Sign</th>
+                                <th>Weight</th>
+                                <th>Height</th>
+                                <th>Temperature</th>
+                                <th>Pulse</th>
+                                <th>Bp_systolic</th>
+                                <th>Bp_diastolic</th>
+                                <th>Sto2</th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                            </tr>
+                            <tr>
                                 <td></td>
                                 <td></td>
                                 <td></td>
@@ -88,7 +145,65 @@
                                 <td></td>
                                 <td></td>
                             </tr>
+                            <tr>
+                                <th rowspan="2" style="vertical-align: middle">Blood Test</th>
+                                <th>Glucose</th>
+                                <th>Cholestrol</th>
+                                <th>Uric Acid</th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <th rowspan="2" style="vertical-align: middle;text-align: center;">Urine Test</th>
+                                <th>Leukocytes</th>
+                                <th>Nitrate</th>
+                                <th>Urobilinogen</th>
+                                <th>Protein</th>
+                                <th>PH</th>
+                                <th>Blood</th>
+                                <th>Sp_gravity</th>
+                                <th>Ketone</th>
+                                <th>Blirubin</th>
+                                <th>Glucose</th>
+                                <th>Ascorbic_acid</th>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+
                         </table>
+
+
+
                     </div>
                 </div>
             </div>
